# churn-prediction

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  run_pipeline.sh
.github/workflows/: cicd-google-cloudrun.yml  cicd_ml_pipeline.yml  google-cloudrun-docker.yml
src/app/: main.py
src/common/: __init__.py  data.py  data_preprocessing.py  inference_features.py  inference_utils.py  logger.py  model_registry.py  modelling.py  paths.py  save_data.py
src/frontend/: app.py
src/pipeline/: feature.py  inference.py  training.py
src/test_endpoint/: new_test.py  test.py
